fix: removing all primitive elements from codebase. system now functions as planes, sketches, 2d objects
